--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
   image_picker: ^1.0.0
+  flutter_switch: ^0.3.2
+  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
   flutter_test:
